# Esp32-C

./: .gitignore  README.md
espidf/espidf-camera/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.bak  sdkconfig.defaults
espidf/espidf-camera/components/esp32-camera/: CMakeLists.txt
espidf/espidf-camera/components/esp32-camera/driver/: cam_hal.c
espidf/espidf-camera/main/: CMakeLists.txt  common.h  idf_component.yml  main.cpp
espidf/espidf-camera/main/camera/: UnitCamS3_5MP.cpp  UnitCamS3_5MP.h  UnitCamS3_5MP_connection.cpp  UnitCamS3_5MP_function.cpp  UnitCamS3_5MP_working.cpp  hal_config.h
espidf/espidf-camera/main/services/: SettingService.cpp  SettingService.h  StorageService.cpp  StorageService.h  WebServerService.cpp  WebServerService.h  WifiService.cpp  WifiService.h
espidf/espidf-camera/partition_table/: partitionTable.csv
espidf/espidf-camera/spiffs/: app.js  index.html  style.css
espidf/espidf-camera/template-app/: partitions.csv  sdkconfig.bak
espidf/espidf-camera/template-app/components/esp32-camera/driver/: cam_hal.c
espidf/espidf-camera/template-app/main/: CMakeLists.txt  common.h  idf_component.yml  main.c  main.cpp
espidf/espidf-camera/template-app/main/camera/: UnitCamS3_5MP.cpp  UnitCamS3_5MP.h  UnitCamS3_5MP_connection.cpp  UnitCamS3_5MP_function.cpp  UnitCamS3_5MP_working.cpp  hal_config.h
espidf/espidf-camera/template-app/partition_table/: partitionTable.csv
espidf/esptest/: CMakeLists.txt  sdkconfig
espidf/hello_world/: partitions.csv
espidf/hello_world/main/: CMakeLists.txt  hello_world_main.c
espidf/lora_test/: CMakeLists.txt  partitions.csv  partitions.csv.F4  sdkconfig.defaults.esp32c5  sdkconfig.esp32
espidf/lora_test/main/: CMakeLists.txt  app_state.cpp  app_state.h  config.h  config_storage.cpp  config_storage.h  idf_component.yml  llcc68.cpp  llcc68.h  main.cpp  web_server.cpp  web_server.h
espidf/lora_test/partition_table/: partitionTable.csv
espidf/lora_test/spiffs/: app.js  index.html  style.css
espidf/sample_project/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
espidf/sample_project/main/: CMakeLists.txt  idf_component.yml  main.cpp
pico/: pymakr.conf
