idf_component_register(SRCS "main.cpp"
                    "camera/UnitCamS3_5MP.cpp"
                    "camera/UnitCamS3_5MP_working.cpp"
                    "mic/PDMMic.cpp"
                    "services/WifiService.cpp"
                    "services/SettingService.cpp"
                    INCLUDE_DIRS ".")