idf_component_register(SRCS "main.cpp"
                    "camera/UnitCamS3_5MP.cpp"
                    "mic/PDMMic.cpp"
                    "services/WifiService.cpp"
                    "services/StorageService.cpp"
                    "services/WebServerService.cpp"
                    INCLUDE_DIRS ".")